# learn-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: gl.h
ext/glad/src/: gl.c
ext/patches/: CMakeLists.txt  README.md  apply-patches.py  glfw-dev-reverse.patch  glfw-dev.patch
ext/patches/python-patch/: patch.py
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: gl.c
src/: CMakeLists.txt  hello-window.cpp  hello_triangle.cpp  hello_window.cpp  imgui-test.cpp  simple-setup.cpp
src/hello_triangle/: CMakeLists.txt  hello_triangle.cpp
src/hello_window/: CMakeLists.txt  hello_window.cpp
